--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                     et iste impedit possimus tenetur reiciendis vel ab aut necessitatibus aliquid accusantium aperiam qui,
                     distinctio tempora quo. Reiciendis facere consectetur dolorum. Similique alias aut aliquid perspiciatis
                     explicabo quaerat? Tenetur, assumenda laborum.
-                    <a href="https://ru.wikipedia.org/wiki/Land_Rover_Range_Rover">Read more...</a>
+                    <a href="https://ru.wikipedia.org/w/index.php?search=Land%20Rover%20Discovery&title=%D0%A1%D0%BB%D1%83%D0%B6%D0%B5%D0%B1%D0%BD%D0%B0%D1%8F%3A%D0%9F%D0%BE%D0%B8%D1%81%D0%BA&ns0=1">Read more...</a>
                 </p>
                 <div class="clear-both"></div>
             </div>
@@ -103,7 +103,7 @@
                     et iste impedit possimus tenetur reiciendis vel ab aut necessitatibus aliquid accusantium aperiam qui,
                     distinctio tempora quo. Reiciendis facere consectetur dolorum. Similique alias aut aliquid perspiciatis
                     explicabo quaerat? Tenetur, assumenda laborum.
-                    <a href="https://ru.wikipedia.org/wiki/Land_Rover_Range_Rover">Read more...</a>
+                    <a href="https://ru.wikipedia.org/w/index.php?go=%D0%9F%D0%B5%D1%80%D0%B5%D0%B9%D1%82%D0%B8&search=Land+Rover+Defender&title=%D0%A1%D0%BB%D1%83%D0%B6%D0%B5%D0%B1%D0%BD%D0%B0%D1%8F%3A%D0%9F%D0%BE%D0%B8%D1%81%D0%BA&ns0=1">Read more...</a>
                 </p>
                 <div class="clear-both"></div>
             </div>
@@ -130,7 +130,7 @@
                     et iste impedit possimus tenetur reiciendis vel ab aut necessitatibus aliquid accusantium aperiam qui,
                     distinctio tempora quo. Reiciendis facere consectetur dolorum. Similique alias aut aliquid perspiciatis
                     explicabo quaerat? Tenetur, assumenda laborum.
-                    <a href="https://ru.wikipedia.org/wiki/Land_Rover_Range_Rover">Read more...</a>
+                    <a href="https://ru.wikipedia.org/w/index.php?go=%D0%9F%D0%B5%D1%80%D0%B5%D0%B9%D1%82%D0%B8&search=Land+Rover&title=%D0%A1%D0%BB%D1%83%D0%B6%D0%B5%D0%B1%D0%BD%D0%B0%D1%8F%3A%D0%9F%D0%BE%D0%B8%D1%81%D0%BA&ns0=1">Read more...</a>
                 </p>
                 <div class="clear-both"></div>
             </div>
